k8s-rust-api/rustapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rustapp
  template:
    metadata:
      labels:
        app: rustapp
    spec:
      containers:
        - name: rustapp
          image: helixasphyxia/rustapp:1.0.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: rustapp-service
spec:
  selector:
    app: rustapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
