k8s-rust-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: api.cvaltierra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustapp-service
                port:
                  number: 8080
